feat: add initial application structure with admin, course, event, user, and enrollment features